--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/demo/manage.py",
             "console": "integratedTerminal",
-            "justMyCode": true, 
+            "justMyCode": false, 
             "args": [
                 "runserver"
             ], 
